--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
+         <div id="page">
+        <div class="entete">
 <h1 align="center">Alexiane Arphexad</h1>
 <h2 align="center">Licence 3 des Sciences du Langage</h2>
-<center><img src="./static/img/sorbonne-nouvelle-devise-trapezes.png" width="20%" /><img src="./static/img/photo.png" width="10%" /></center>
+ <center>  <img src="assets/img/sorbonne-nouvelle-devise-trapezes.png" width="20%">
+                <img src="assets/img/photo.png" width="10%">
+            </center>
+        </div>
+
+ <div id="aboutme">
 
 <p>Mon CV des trois dernières années :</p>
 <table border="1px">
@@ -30,9 +38,12 @@
     <li><i>Witch and god</i>, Liv Stone, Broché</li>
     <li><i>Le prince cruel</i>, Holly Black, Le livre de Poche</li>
 </ol>
-
+ </div>
+             
 <footer>
   <p><a href="http://www.univ-paris3.fr/">Lien vers le site de Sorbonne Nouvelle.</a></p>
 </footer>
     </body>
+
+     </div>
 </html>
