--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="entete">
 <h1 align="center">Alexiane Arphexad</h1>
 <h2 align="center">Licence 3 des Sciences du Langage</h2>
- <center>  <img src="https://github.com/alexianexad/LZML021a/blob/main/logo-sorbonne-nouvelle.jpg?raw=true" width="20%">
-                <img src="assets/img/photo.png" width="10%">
+ <center>  <img src="C:\Users\alexi\Downloads\prog\assets\logo-sorbonne-nouvelle.jpg" width="20%">
+                
             </center>
         </div>
 
