--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <div id="aboutme">
 
 <p>Mon CV des trois dernières années :</p>
-<table border="1px">
+<center><table border="1px">
     <thead>
         <tr><th>année universitaire</th><th>Statut</th></tr>
     </thead>
@@ -37,7 +37,7 @@
     <li><i>Steelstriker</i>, Marie Lu, édition Milan</li>
     <li><i>Witch and god</i>, Liv Stone, Broché</li>
     <li><i>Le prince cruel</i>, Holly Black, Le livre de Poche</li>
-</ol>
+</ol></center>
  </div>
              
 <footer>
