Update index.html avec Javascript

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <footer>
   <p><a href="http://www.univ-paris3.fr/">Lien vers le site de Sorbonne Nouvelle.</a></p>
 </footer>
+<script src=""C:\Users\alexi\Downloads\prog\assets\JS\JS.js""></script>
     </body>
 
      </div>
