Update index.html avec javascript

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <li><i>Witch and god</i>, Liv Stone, Broché</li>
     <li><i>Le prince cruel</i>, Holly Black, Le livre de Poche</li>
 </ol></center>
-     <button onclick="Nom()">Comment vous appelez-vous ?</button>
+     <button onclick="nom()">Comment vous appelez-vous ?</button>
             <button onclick="afficherAide()">Afficher l'aide</button>
  </div>
              
