--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="entete">
 <h1 align="center">Alexiane Arphexad</h1>
 <h2 align="center">Licence 3 des Sciences du Langage</h2>
- <center>  <img src="C:\Users\alexi\Downloads\prog\assets\logo-sorbonne-nouvelle.jpg" width="40%">
+ <center>  <img src="JS.js" width="40%">
                 
             </center>
         </div>
