--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <li><i>Witch and god</i>, Liv Stone, Broché</li>
     <li><i>Le prince cruel</i>, Holly Black, Le livre de Poche</li>
 </ol></center>
+      <label for="fname">Comment vous appelez vous?</label>
+  <input type="text" id="fname" name="fname"><br><br>
      <button onclick="nom()">Comment vous appelez-vous ?</button>
             <button onclick="afficherAide()">Afficher l'aide</button>
  </div>
