--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
     
      <button onclick="nom()">Comment vous appelez-vous ?</button>
             <button onclick="afficherAide()">Afficher l'aide</button>
+    <h2 class="has-background-info has-text-white">Exercice 4</h2>
+                    <br/>
+                    <p>Découpez le texte suivants en mots (selon des espaces) puis créer un tableau en utilisant la construction forEach.</p>
+                    <br/>
+                    <p>Pour créer le résultat final vous pouvez au choix :</p>
+                    <ul>
+                        <li>• générer un chaîne de caractères ;</li>
+                        <li>• utiliser les méthodes "<a href="https://www.w3schools.com/jsref/met_document_createelement.asp">createElement</a>" et "<a href="https://www.w3schools.com/jsref/met_node_appendchild.asp">appendChild</a>".</li>
+                    </ul>
+                    <br/>
+                    <p>Écrivez les résultat dans le div d'identifiant "exercice4Resultat".</p>
+                    <br/>
+                    <textarea id="texteExercice4" name="mon_texte" rows="10" cols="50">Ici, on entre du texte qu'on va segmenter en "mots".</textarea>
+                    <br/>
+                    <button onclick="exercice4()">Segmenter le texte dans un tableau.</button>
+                    <div id="exercice4Resultat"></div>
+
  </div>
       <div id="container">
             <h1 style="text-align:center;">Analyse des <span style="color:green">données</span> dans un fichier</h1>
