--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <button onclick="alert('bonjour');"><span>Bonjour</span></button>
                     <br />
                     <br />
-                    <button class="submit" id="segmentationButton"><span>Segmentation</span></button>
+                    <button class="submit" onclick="alert('Je ne fais rien, changez-moi !');"><span>segmentation</span></button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !');"><span>action 1</span></button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !')"><span>action 2</span></button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !')"><span>action 3</span></button>
