--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
          <div id="page">
         <div class="entete">
-<h1 align="center">Alexiane Arphexad</h1>
+<h1 align="center">Alexiane A</h1>
 <h2 align="center">Licence 3 des Sciences du Langage</h2>
  <center>  <img src="assets/image/logo-sorbonne-nouvelle.jpg" width="40%">
                 
