--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </small>
                     <br />
                     <br />
-                    <button onclick="alert('bonjour');"><span>Bonjour</span></button>
+                    <button class="special" onclick="alert('Voici un site qui permet d\'analyser des textes.');"><span>Bonjour</span></button> <!-- commenter -->
                     <br />
                     <br />
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !');"><span>segmentation</span></button>
