--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <br />
                     <br />
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !');"><span>segmentation</span></button>
-                    <button class="submit" onclick="alert('Je ne fais rien, changez-moi !');"><span>action 1</span></button>
+                    <button onclick="dictionnaire()">Dictionnaire</button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !')"><span>action 2</span></button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !')"><span>action 3</span></button>
                     <button class="submit" onclick="alert('Je ne fais rien, changez-moi !')"><span>action 4</span></button>
