--- a/index.html
+++ b/index.html
@@ -71,16 +71,11 @@
 
                 <br/>
 
-                <div class="actions">
-                    <button onclick="dictionnaire()">Dictionnaire</button>
-                    <button onclick="grep()">GREP</button>
-                    <input type="text" id="motif" placeholder="Expression grep..." />
-                    <button onclick="concordancier()">📖 Concordancier</button>
-                    <input type="text" id="concInput" placeholder="Mot à chercher..." />
-                    <button onclick="mots5lettres()">Mots de 5 lettres</button>
-                    <button onclick="chargerTexte()">Charger Texte</button>
-                    <button onclick="segmenterTexte()">Segmenter automatiquement</button>
-                </div>
+                div class="button-container">
+        <button onclick="dictionnaire()">Dictionnaire</button>
+        <button onclick="grep()">Grep</button>
+        <button onclick="concordancier()">Concordancier</button>
+    </div>
             </div>
 
             <div id="logger" style="width:100%"></div>
