--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
 
                 <br/>
 
-                div class="button-container">
+                <div class="button-container">
         <button onclick="dictionnaire()">Dictionnaire</button>
         <button onclick="grep()">Grep</button>
+        <button onclick="surlignerVoyelles()">Voyelles en rouge</button>
         <button onclick="concordancier()">Concordancier</button>
     </div>
             </div>
