--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="button-container">
         <button onclick="dictionnaire()">Dictionnaire</button>
         <button onclick="grep()">Grep</button>
-        <button onclick="surlignerVoyelles()">Voyelles en rouge</button>
+        <button onclick="surlignerVoyelles()">/: Remplace les voyelles</button>
         <button onclick="concordancier()">Concordancier</button>
     </div>
             </div>
