--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <div id="fileDisplayArea"></div>
                 <div id="page-analysis"></div>
                 <textarea id="texte" style="display:none;"></textarea>
+                <input type="text" id="motif" placeholder="Motif regex ou mot-clé...">
                 <div id="resultats"></div>
             </div>
         </div>
