--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <button onclick="grep()">Grep</button>
         <button onclick="surlignerVoyelles()">/: Remplace les voyelles</button>
         <button onclick="concordancier()">Concordancier</button>
+        <button onclick="nbPhrases()">Nombre de phrases</button>
+        <button onclick="tokenLong()">Mots les plus longs</button>
+        <button onclick="pieChart()">GrapheCamembert-Pie Chart</button>
     </div>
             </div>
 
