--- a/index.html
+++ b/index.html
@@ -40,18 +40,39 @@
                 </ol>
             </center>
 
-        
+        <div>
+                    
 
         <div id="container">
             <h1 style="text-align:center;">Analyse des <span style="color:green">données</span> dans un fichier</h1>
+              <div id="page-wrapper">
 
-            <div id="page-wrapper">
-                <div>
-                    <label for="fileInput" class="btn"><small>Sélectionner un fichier au format .txt :</small></label>
-                    <input id="fileInput" type="file" accept="text/plain" />
+<div>
+                    <center><button id="button_aide" class="fade" onclick="showHide_aide()">Afficher l'aide</button></center>
+                    <div id="aide" style="display:none;">
+                        <p><i>Voici un mode d'emploi :</i>
+                            <ul>
+                                <li>Etape 1 : Chargez un texte au format .txt à l'aide du bouton Parcourir.</li>
+                                <li>Etape 2 (facultatif) : Précisez les délimiteurs de votre choix puis cliquez sur le bouton Segmentation.</li>
+                                <li>Le bouton Dictionnaire : permet d'obtenir un tableau qui classe les tokens de façon décroissante en fonction du nombre d'occurences.</li>
+                                <li>Le bouton GREP : Entrez un pôle (une regex ou un mot) puis cliquez sur GREP pour obtenir le tableau des lignes d'occurences.</li>
+                                <li>Le bouton Concordancier : Entrez un pôle (une regex ou un mot) et une longueur de contexte puis cliquez sur Concordancier pour obtenir un tableau avec le contexte gauche et droit du pôle recherché.</li>
+                                <li>Le bouton Nombre de phrases : cliquez et il affichera le nombre de phrases.</li>
+                                <li>Le bouton Mots les plus longs : cliquez et il affichera les 10 mots les plus longs du texte.</li>
+                                <li>Le bouton Pie Chart : Saisissez des stopwords et cliquez sur le bouton pour afficher un graphique des 30 mots les plus fréquents dans le texte hors stopwords.</li>
+                                <li>Le bouton /kujuj/ : ajoute uj comme suffixe à chaque mot du texte chargé...</li>
+                            </ul>
+                        </p>
+                    </div>
                 </div>
-
-                <br/>
+                </br>
+                <div>
+                    <span>
+                        <label for="fileInput" class="btn"><small>Sélectionner un fichier au format .txt :</small></label>
+                        <input id="fileInput" type="file" accept="text/plain" name="Fichier (.txt)" />
+                    </span>
+                </div>
+                <br />
 
                 <p style="text-align:center;">
                     <small>
