--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
     </div>
             </div>
 
-            <div id="logger" style="width:100%"></div>
+            <center>
+            <div id="logger1" style="width:100%"></div>
+            <div id="logger2" style="width:100%"></div>
+            <div id="logger3" style="width:100%"></div>
+            </center>
 
             <br/>
 
