--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
                         </p>
                     </div>
                 </div>
+                  <br />
+                    <br />
+                    <button class="special" onclick="alert('Voici un site qui permet d\'analyser des textes.');"><span>Bonjour</span></button> <!-- commenter -->
+                    <br />
+                    <br />
                 </br>
                 <div>
                     <span>
