--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <br/>
 <br />
                     <br />
-                    <button class="special" onclick="alert('Voici un site qui permet d\'analyser des textes.');"><span>Bonjour</span></button> <!-- commenter -->
+                    <center><button class="special" onclick="alert('Voici un site qui permet d\'analyser des textes.');"><span>Bonjour</span></button> <!-- centrer le bouton "Bonjour --></center>
                     <br />
                     <br />
                 <div class="button-container">
