--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                         <label for="lgID">Longueur</label>
                         <input type="text" value="10" id="lgID" size="10" />
                     </small>
+                    <small>
+                        <label for="stopwordID" class="mylabel">mots grammaticaux, Stopwords en anglais)</label>
+                        &nbsp;
+                        <input type="text" value="de,le,la,les,à,et,des,un,une,du,que,en,l,que,qu,d,s,se,ne,n,ce,me,sa" name="stopwords" id="stopwordID" size="60" />
+                    </small>
                 </p>
 
                 <br/>
