--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <button onclick="grep()">Grep</button>
         <button onclick="surlignerVoyelles()">/: Remplace les voyelles</button>
         <button onclick="concordancier()">Concordancier</button>
+        <button class="fade" onclick="kujuj()"><span>/kujuj/</span></button>
         <button onclick="nbPhrases()">Nombre de phrases</button>
         <button onclick="tokenLong()">Mots les plus longs</button>
         <button onclick="pieChart()">GrapheCamembert-Pie Chart</button>
