--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><i>Le prince cruel</i>, Holly Black, Le Livre de Poche</li>
                 </ol>
             </center>
-        </div> <!-- ✅ fermeture ajoutée ici -->
+        </div> <!-- fermeture ajoutée ici -->
 
         <div id="container">
             <h1 style="text-align:center;">Analyse des <span style="color:green">données</span> dans un fichier</h1>
