--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
                 <input type="text" id="motif" placeholder="Motif regex ou mot-clé...">
                 <div id="resultats"></div>
             </div>
+            <div id="chartContainer">
+        <canvas id="myPieChart" width="400" height="400"></canvas>
+    </div>
         </div>
 
         <footer>
